--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=SpringDeployeement
 #Database Settings
-spring.datasource.url=jdbc:mysql://localhost:3306/CustomerTest?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://root:ljwPMdsHlPDNcsbkspEwqfxtUAOtFUtR@interchange.proxy.rlwy.net:11611/railway?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=ljwPMdsHlPDNcsbkspEwqfxtUAOtFUtR
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.maximum-pool-size=10
 
